syntax = "proto3";

package mcuc.stark;

option go_package = "gitlab.com/mcuc/monorepo/backend/stark/pkg/api;stark";

import "google/protobuf/timestamp.proto";
import "stark/api/morgan.proto";
import "stark/api/pepper.proto";
import "stark/api/tony.proto";
import "stark/api/ultron.proto";

// Stark only a name
// - Banking -> Pepper
// - Telcos -> Morgan
// - Report -> Howard
// - EWallet ->  Tony
// - Crypto -> Ultron
// - Query -> Vision

enum PaymentType {
  PAYMENT_UNSPECIFIED = 0;
  TOPUP = 1;
  WITHDRAW = 2;
}

enum MethodType {
  METHOD_UNSPECIFIED = 0;
  T = 1; // Bank Transfer
  I = 2; // Internet Banking
  P = 3; // Phone card/Telco
  E = 4; // E Wallet
  C = 5; // Cryptocurrency
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  CREATED = 1;
  CANCELED = 2;
  REJECTING = 3;
  REJECTED = 4;
  REJECT_FAILED = 5;
  APPROVED = 6;
  APPROVE_FAILED = 7;
  SUBMITTED = 8;
  SUBMIT_FAILED = 9;
  COMPLETED = 10;
  // for calling to UMO and prevent teller submit manual
  SUBMITTING = 11;
}

enum Currency {
  CURRENCY_UNSPECIFIED = 0;
  VND = 1;
  USDT = 2;
}

message Payment {
  int64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string created_by = 5;
  string updated_by = 6;
  string approved_by = 7;

  int64 merchant_id = 8;
  MethodType method = 9;
  PaymentType type = 10;
  Status status = 11;
}

message PaymentDetail {
  oneof payload {
    mcuc.stark.pepper.BankingPaymentDetail banking = 1;
    mcuc.stark.tony.EWalletPaymentDetail e_wallet = 2;
    mcuc.stark.morgan.TelcoPaymentDetail telco = 3;
    mcuc.stark.ultron.CryptoPaymentDetail crypto = 4;
  }
}

message PaymentWithDetail {
  Payment payment = 1;
  PaymentDetail payment_detail = 2;
}

message Revision {
  int64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  string created_by = 3;
  int64 payment_id = 4;
  Status status = 5;
  string note = 6;
}

// Callback to Jarvis
message CompletePaymentRequest {
  int64 payment_id = 1;
  MethodType payment_method = 2;
  PaymentType payment_type = 3;
  Status payment_status = 4;
  PaymentDetail payment_detail = 5;
  uint64 mex_current_balance = 6;
}

// CompletePaymentReply
message CompletePaymentReply {
}